builds navbar and 5 flex cards to html template

--- a/index.html
+++ b/index.html
@@ -18,37 +18,200 @@
     />
   </head>
   <body>
+    <section class="hero is-info is-bold">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title">Team Profile</h1>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </section>
     <section class="container">
-      <div class="card">
-        <div class="card-header is-flex-direction-column">
-          <p class="title is-4">John Smith</p>
-          <div class="is-flex is-align-items-center mb-2 pt-1">
-            <span class="icon">
-              <i class="fas fa-mug-hot"></i>
-            </span>
-            <span class="icon">
-              <i class="fas fa-user-graduate"></i>
-            </span>
-            <span class="icon">
-              <i class="fas fa-glasses"></i>
-            </span>
-            <p class="ml-2">Role</p>
+      <div
+        class="columns is-multiline is-centered cards-container"
+        id="sectioncontainer"
+      >
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-header is-flex-direction-column">
+              <p class="title is-4">John Smith</p>
+              <div class="is-flex is-align-items-center mb-2 pt-1">
+                <span class="icon">
+                  <i class="fas fa-mug-hot"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-user-graduate"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-glasses"></i>
+                </span>
+                <p class="ml-2">Role</p>
+              </div>
+            </div>
+            <div class="card-content">
+              <table
+                class="table is-bordered is-narrow is-hoverable is-fullwidth"
+              >
+                <tbody>
+                  <tr>
+                    <td>Three</td>
+                  </tr>
+                  <tr>
+                    <td>Five</td>
+                  </tr>
+                  <tr>
+                    <td>Seven</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-        <div class="card-content">
-          <table class="table is-bordered is-narrow is-hoverable is-fullwidth">
-            <tbody>
-              <tr>
-                <td>Three</td>
-              </tr>
-              <tr>
-                <td>Five</td>
-              </tr>
-              <tr>
-                <td>Seven</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-header is-flex-direction-column">
+              <p class="title is-4">John Smith</p>
+              <div class="is-flex is-align-items-center mb-2 pt-1">
+                <span class="icon">
+                  <i class="fas fa-mug-hot"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-user-graduate"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-glasses"></i>
+                </span>
+                <p class="ml-2">Role</p>
+              </div>
+            </div>
+            <div class="card-content">
+              <table
+                class="table is-bordered is-narrow is-hoverable is-fullwidth"
+              >
+                <tbody>
+                  <tr>
+                    <td>Three</td>
+                  </tr>
+                  <tr>
+                    <td>Five</td>
+                  </tr>
+                  <tr>
+                    <td>Seven</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-header is-flex-direction-column">
+              <p class="title is-4">John Smith</p>
+              <div class="is-flex is-align-items-center mb-2 pt-1">
+                <span class="icon">
+                  <i class="fas fa-mug-hot"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-user-graduate"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-glasses"></i>
+                </span>
+                <p class="ml-2">Role</p>
+              </div>
+            </div>
+            <div class="card-content">
+              <table
+                class="table is-bordered is-narrow is-hoverable is-fullwidth"
+              >
+                <tbody>
+                  <tr>
+                    <td>Three</td>
+                  </tr>
+                  <tr>
+                    <td>Five</td>
+                  </tr>
+                  <tr>
+                    <td>Seven</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-header is-flex-direction-column">
+              <p class="title is-4">John Smith</p>
+              <div class="is-flex is-align-items-center mb-2 pt-1">
+                <span class="icon">
+                  <i class="fas fa-mug-hot"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-user-graduate"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-glasses"></i>
+                </span>
+                <p class="ml-2">Role</p>
+              </div>
+            </div>
+            <div class="card-content">
+              <table
+                class="table is-bordered is-narrow is-hoverable is-fullwidth"
+              >
+                <tbody>
+                  <tr>
+                    <td>Three</td>
+                  </tr>
+                  <tr>
+                    <td>Five</td>
+                  </tr>
+                  <tr>
+                    <td>Seven</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-header is-flex-direction-column">
+              <p class="title is-4">John Smith</p>
+              <div class="is-flex is-align-items-center mb-2 pt-1">
+                <span class="icon">
+                  <i class="fas fa-mug-hot"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-user-graduate"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-glasses"></i>
+                </span>
+                <p class="ml-2">Role</p>
+              </div>
+            </div>
+            <div class="card-content">
+              <table
+                class="table is-bordered is-narrow is-hoverable is-fullwidth"
+              >
+                <tbody>
+                  <tr>
+                    <td>Three</td>
+                  </tr>
+                  <tr>
+                    <td>Five</td>
+                  </tr>
+                  <tr>
+                    <td>Seven</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </section>
