--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <section class="hero is-info is-bold">
@@ -28,7 +29,7 @@
         </div>
       </div>
     </section>
-    <section class="container">
+    <section class="container px-1">
       <div
         class="columns is-multiline is-centered cards-container"
         id="sectioncontainer"
@@ -36,16 +37,10 @@
         <div class="column is-4">
           <div class="card">
             <div class="card-header is-flex-direction-column">
-              <p class="title is-4">John Smith</p>
-              <div class="is-flex is-align-items-center mb-2 pt-1">
+              <p class="title is-4 ml-3">John Smith</p>
+              <div class="is-flex is-align-items-center ml-3 mb-2 pt-1">
                 <span class="icon">
                   <i class="fas fa-mug-hot"></i>
-                </span>
-                <span class="icon">
-                  <i class="fas fa-user-graduate"></i>
-                </span>
-                <span class="icon">
-                  <i class="fas fa-glasses"></i>
                 </span>
                 <p class="ml-2">Role</p>
               </div>
