improves css to match mock

--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
               >
                 <tbody>
                   <tr>
-                    <td>Three</td>
+                    <td>
+                      <a
+                        href="mailto:chriscoyier@gmail.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >chriscoyier@gmail.com</a
+                      >
+                    </td>
                   </tr>
                   <tr>
                     <td>Five</td>
